# TUL_PG2

./: .gitignore  App.cpp  CMakeLists.txt  Grafika.cpp  Grafika.sln  Grafika.vcxproj  Grafika.vcxproj.filters  Mesh.h  Model.h  OBJloader.cpp  README.md  ShaderProgram.cpp  ShaderProgram.hpp  app.cpp  app.h  app.hpp  app_settings.json  app_settings.json.h  assets.hpp  callbacks.cpp  callbacks.h  camera.hpp  fragment_shader.frag  gl_err_callback.cpp  gl_err_callback.h  main.cpp  vcpkg-configuration.json  vcpkg.json  vertex_shader.vert
Zadani/: cv02.md  cv03.md  cv04.md  cv05.md
resources/shaders/: basic.frag  basic.vert  phong.frag  phong.vert  textured.vert  transparent.frag
shaders/: fragment_shader.frag  vertex_shader.vert
src/: Mesh.hpp  Model.hpp  OBJloader.cpp  ShaderProgram.cpp  ShaderProgram.hpp  camera.hpp  cv02.cpp
